--- a/application/templates/index.html
+++ b/application/templates/index.html
@@ -71,7 +71,7 @@
                 my web & software development skills.
             </p>
             <!-- Button for More About Me -->
-            <a class="my-2 btn btn-outline-primary" href="{{ url_for('app_routes.show_aboutme') }}">
+            <a class="my-2 btn btn-outline-primary" href="{{ url_for('show_aboutme') }}">
                 Read More About Me
             </a>
         </div>
@@ -257,7 +257,7 @@
                                         </div>
                                         <div class="card-body">
                                             <h5 class="card-title py-2 border-top"><strong>
-                                                <a href="{{ url_for('app_routes.tarot_start') }}">
+                                                <a href="{{ url_for('tarot_start') }}">
                                                     Exclusive Affirmation Generator
                                                 </a>
                                             </strong></h5>
@@ -274,7 +274,7 @@
                                                 <li>Database Management with Sql-Alchemy</li>
                                             </ul>
                                             </p>
-                                            <a href="{{ url_for('app_routes.tarot_start') }}" class="btn btn-dark mt-2">
+                                            <a href="{{ url_for('tarot_start') }}" class="btn btn-dark mt-2">
                                                 Take Me To It!</a>
                                             <a href="#" class="btn btn-light mt-2">
                                                 See The Code On Github</a>
@@ -302,7 +302,7 @@
                                         </div>
                                         <div class="card-body">
                                             <h5 class="card-title py-2 border-top"><strong>
-                                                <a href="{{ url_for('app_routes.show_robots_txt') }}">
+                                                <a href="{{ url_for('show_robots_txt') }}">
                                                     Robots.txt Look-up
                                                 </a>
                                             </strong></h5>
@@ -318,7 +318,7 @@
                                                 url's robot.txt and a "how-to-read" guide. Users can also print or save
                                                 as pdf.
                                             </p>
-                                            <a href="{{ url_for('app_routes.show_robots_txt') }}" class="btn btn-dark mt-2">
+                                            <a href="{{ url_for('show_robots_txt') }}" class="btn btn-dark mt-2">
                                                 Take Me To It!</a>
                                             <a href="#" class="btn btn-light mt-2">
                                                 See The Code On Github</a>
@@ -346,7 +346,7 @@
                                         </div>
                                         <div class="card-body">
                                             <h5 class="card-title py-2 border-top"><strong>
-                                                <a href="{{ url_for('app_routes.page_preloader') }}">
+                                                <a href="{{ url_for('page_preloader') }}">
                                                     Data Science - Box Office vs Streaming
                                                 </a>
                                             </strong></h5>
@@ -361,7 +361,7 @@
                                                 the
                                                 charts used in the report in a database.
                                             </p>
-                                            <a href="{{ url_for('app_routes.page_preloader') }}" class="btn btn-dark mt-2">
+                                            <a href="{{ url_for('page_preloader') }}" class="btn btn-dark mt-2">
                                                 Take Me To It!</a>
                                             <a href="#" class="btn btn-light mt-2">
                                                 See The Code On Github</a>
@@ -380,7 +380,7 @@
                     </div>
                 </div>
                 <!-- Button for Full Portfolio -->
-                <a class="mt-4 btn btn-primary" type="button" href="{{ url_for('app_routes.show_portfolio') }}">See My Full
+                <a class="mt-4 btn btn-primary" type="button" href="{{ url_for('show_portfolio') }}">See My Full
                     Portfolio</a>
             </div>
         </div>
