--- a/application/templates/projects.html
+++ b/application/templates/projects.html
@@ -207,7 +207,7 @@
                                 <li>Database Management with Sql-Alchemy</li>
                             </ul>
                             </p>
-                            <a href="{{ url_for('app_routes.tarot_start') }}" class="btn btn-warning mt-2">
+                            <a href="{{ url_for('tarot_start') }}" class="btn btn-warning mt-2">
                                 Take Me To It!</a>
                             <a href="#" class="btn btn-light mt-2">
                                 See The Code On Github</a>
@@ -249,7 +249,7 @@
                                 url's robot.txt and a "how-to-read" guide. Users can also print or save
                                 as pdf.
                             </p>
-                            <a href="{{ url_for('app_routes.show_robots_txt') }}" class="btn btn-warning mt-2">
+                            <a href="{{ url_for('show_robots_txt') }}" class="btn btn-warning mt-2">
                                 Take Me To It!</a>
                             <a href="#" class="btn btn-light mt-2">
                                 See The Code On Github</a>
@@ -291,7 +291,7 @@
                                 the
                                 charts used in the report in a database.
                             </p>
-                            <a href="{{ url_for('app_routes.page_preloader') }}" class="btn btn-warning mt-2">
+                            <a href="{{ url_for('page_preloader') }}" class="btn btn-warning mt-2">
                                 Take Me To It!</a>
                             <a href="#" class="btn btn-light mt-2">
                                 See The Code On Github</a>
