--- a/application/templates/index.html
+++ b/application/templates/index.html
@@ -432,6 +432,7 @@
                 {{ wtf.form_field(form.submit, class='btn btn-outline-primary') }}
             </div>
         </form>
+        <button type="button" onclick="{{ pre_fill_database }}">load database</button>
     </div>
 </div>
 
