--- a/application/templates/base.html
+++ b/application/templates/base.html
@@ -9,7 +9,7 @@
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
       integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
 <!-- My CSS -->
-<link href="/static/assets/styles.css" rel="stylesheet">
+<link href="/static/css/styles.css" rel="stylesheet">
 
 <!-- Favicon -->
 <link rel="apple-touch-icon" sizes="180x180" href="/static/images/favicon_io/apple-touch-icon.png">
