update tarot html

--- a/application/templates/tarot_end.html
+++ b/application/templates/tarot_end.html
@@ -17,7 +17,7 @@
             <!-- Divined Message -->
             <p class="night-mode py-4 fs-5"><i>{{ total }}</i></p>
             <!-- Show Tarot Cards -->
-            <div class="row col-lg-10 mx-auto my-4 px-4">
+            <div class="row col-lg-10 mx-auto">
                 {% for card in selected_cards %}
                 <div class="col d-flex justify-content-center">
                     <div class="tarot-card fill d-flex align-items-center">
