--- a/application/templates/tarot_start.html
+++ b/application/templates/tarot_start.html
@@ -147,7 +147,7 @@
 
         <!-- Login Successful - Show Tarot Cards -->
         {% if status == "login_success" %}
-        <div class="row col-lg-10 mx-auto my-4 px-4">
+        <div class="row col-lg-10">
             {% for card in deal_cards %}
             <div class="col d-flex justify-content-center">
                 <a class="tarot-card fill d-flex align-items-center"
