--- a/application/templates/tarot_next_round.html
+++ b/application/templates/tarot_next_round.html
@@ -15,7 +15,7 @@
         <div class="col-lg-10 mx-auto">
 
             <!-- Show Tarot Cards -->
-            <div class="row col-lg-10 mx-auto my-4 px-4">
+            <div class="row col-lg-10 mx-auto">
                 {% for card in deal_cards %}
                 <div class="col d-flex justify-content-center">
                     <a class="tarot-card fill d-flex align-items-center"
