update tarot html

--- a/application/templates/tarot_start.html
+++ b/application/templates/tarot_start.html
@@ -39,7 +39,7 @@
             {% else %}
             <h5 class="night-mode py-4 tarot-instructions ">
                 For three rounds, you will be presented with three cards, from which you will pick the
-                one that calls out to you the most. After selecting your third card, we will divine the message
+                one that calls out to you the most. After selecting your third card, we will deliver the message
                 you were meant to hear today.</h5>
             {% endif %}
 
