--- a/application/templates/tarot_start.html
+++ b/application/templates/tarot_start.html
@@ -115,19 +115,6 @@
                                     password.type = "password";
                                     }
                             }
-
-
-
-
-
-
-
-
-
-
-
-
-
                         </script>
                     </div>
                     <!-- Buttons -->
@@ -147,7 +134,7 @@
 
         <!-- Login Successful - Show Tarot Cards -->
         {% if status == "login_success" %}
-        <div class="row col-lg-10">
+        <div class="row col-lg-10 mx-auto">
             {% for card in deal_cards %}
             <div class="col d-flex justify-content-center">
                 <a class="tarot-card fill d-flex align-items-center"
