--- a/application/templates/base.html
+++ b/application/templates/base.html
@@ -117,7 +117,7 @@
                     </a>
                 </li>
                 <li class="nav-item nav-link px-4">
-                    <a href="#">
+                    <a href="https://github.com/BinaryEgo">
                         <i class="fa-brands fa-github fa-2xl"></i>
                     </a>
                 </li>
