--- a/application/templates/index.html
+++ b/application/templates/index.html
@@ -96,7 +96,10 @@
         <!-- Heading -->
         <h2 class="night-mode border-bottom border-2 border-info py-2">What I Have Built</h2>
         <!-- Summary -->
-        <p class="night-mode"></p>
+        <p class="night-mode">
+            Other than this personal website, <a href="https://github.com/BinaryEgo/Portfolio">whose code you can see here</a>
+            I also have worked on the projects below.
+        </p>
         <!-- Portfolio Accordion -->
         <div class="container">
             <div class="accordion py-4" id="accordionExample">
@@ -276,7 +279,8 @@
                                             </p>
                                             <a href="{{ url_for('tarot_start') }}" class="btn btn-dark mt-2">
                                                 Take Me To It!</a>
-                                            <a href="#" class="btn btn-light mt-2">
+                                            <a href="https://github.com/BinaryEgo/Portfolio/blob/master/application/project_modules/tarot_cards.py"
+                                               class="btn btn-light mt-2">
                                                 See The Code On Github</a>
                                             </p>
                                         </div>
@@ -320,7 +324,8 @@
                                             </p>
                                             <a href="{{ url_for('show_robots_txt') }}" class="btn btn-dark mt-2">
                                                 Take Me To It!</a>
-                                            <a href="#" class="btn btn-light mt-2">
+                                            <a href="https://github.com/BinaryEgo/Portfolio/blob/master/application/project_modules/robots_checker.py"
+                                               class="btn btn-light mt-2">
                                                 See The Code On Github</a>
                                             </p>
                                         </div>
@@ -363,7 +368,8 @@
                                             </p>
                                             <a href="{{ url_for('page_preloader') }}" class="btn btn-dark mt-2">
                                                 Take Me To It!</a>
-                                            <a href="#" class="btn btn-light mt-2">
+                                            <a href="https://github.com/BinaryEgo/Portfolio/blob/master/application/project_modules/movies_interest_boxoffice.py"
+                                               class="btn btn-light mt-2">
                                                 See The Code On Github</a>
                                             </p>
                                         </div>
