update github links

--- a/application/templates/index.html
+++ b/application/templates/index.html
@@ -97,9 +97,8 @@
         <h2 class="night-mode border-bottom border-2 border-info py-2">What I Have Built</h2>
         <!-- Summary -->
         <p class="night-mode">
-            Other than this personal website, <a href="https://github.com/BinaryEgo/Portfolio" style="color:code-text">
-            whose code you can see here, </a>
-            I also have worked on the projects below.
+            Other than this personal website, <a href="https://github.com/BinaryEgo/Portfolio" class="code-text">
+            whose code you can see here</a>, I also have worked on the projects below.
         </p>
         <!-- Portfolio Accordion -->
         <div class="container">
