updated links and added documentation

--- a/application/templates/aboutme.html
+++ b/application/templates/aboutme.html
@@ -67,15 +67,15 @@
         </tr>
         <tr>
             <th scope="row">FRAMEWORKS</th>
-            <td>Bootstrap, Tkinter, Flask, Jinja, Pandas, NumPy</td>
+            <td>Bootstrap, Flask, Pandas, NumPy</td>
         </tr>
         <tr>
             <th scope="row">SOFTWARE</th>
-            <td>Microsoft Office, PyCharm, MySQL, Postman</td>
+            <td>Microsoft Office, PyCharm, MySQL, Google Colab</td>
         </tr>
         <tr>
             <th scope="row">SKILLS</th>
-            <td>Project Management, Data Analysis, Web Development, Object Oriented Programming (OOP), Web Scraping</td>
+            <td>Project Management, Web Development, Data Analysis</td>
         </tr>
         </tbody>
     </table>
@@ -91,16 +91,43 @@
                 utilization.</p>
             <ul>
                 <li class="py-3">
-                    <span class="accomplishment">Created a “Sales Planning Tool”</span> – in Excel that enabled our Local/Regional sellers to navigate our
+                    <span class="accomplishment">Created a “Sales Planning Tool”</span> – in Excel that enabled our
+                    Local/Regional sellers to navigate our
                     inventory of over 70K locations, forecast media campaigns, and generate paperwork.
                 </li>
                 <li class="py-3">
-                    <span class="accomplishment">Designed Inventory/Campaign Management & Reporting workflows</span> – through Excel workbooks I created
+                    <span class="accomplishment">Designed Inventory/Campaign Management & Reporting workflows</span> –
+                    through Excel workbooks I created
                     for optimizing ad placement, tracking inventory utilization, planning make-goods, etc.
                 </li>
                 <li class="py-3">
-                    <span class="accomplishment">Wrote Weekly Internal Newsletters</span> – for the company. I provided analysis of the weekend’s box-office
+                    <span class="accomplishment">Wrote Weekly Internal Newsletters</span> – for the company. I provided
+                    analysis of the weekend’s box-office
                     performance and industry trends.
+                </li>
+            </ul>
+        </div>
+        <!--Relevant Courses-->
+        <h4 class="border-bottom border-2 border-info py-2">Completed Courses</h4>
+        <div class="mt-4">
+            <ul class="list-unstyled">
+                <li>
+                    <p>
+                        <span class="badge alert-secondary">UDEMY</span>
+                        <a href="https://www.udemy.com/certificate/UC-f80b2c91-6ea2-45cc-9c09-a063bf14ee82/"
+                           target="_blank" rel="noopener noreferrer">
+                            100 Days of Code: The Complete Python Pro Bootcamp for 2022
+                        </a>
+                    </p>
+                </li>
+                <li>
+                    <p>
+                        <span class="badge alert-secondary">UDEMY</span>
+                        <a href="https://www.udemy.com/certificate/UC-63042348-3168-4da0-9df0-d8530cd980be/"
+                           target="_blank" rel="noopener noreferrer">
+                            The Ultimate MySQL Bootcamp: Go from SQL Beginner to Expert
+                        </a>
+                    </p>
                 </li>
             </ul>
         </div>
