--- a/application/templates/base.html
+++ b/application/templates/base.html
@@ -107,17 +107,17 @@
             <!-- Icons -->
             <ul class="nav justify-content-center mt-4">
                 <li class="nav-item nav-link px-4">
-                    <a href="https://www.linkedin.com/in/jermyfrancisco/">
+                    <a href="https://www.linkedin.com/in/jermyfrancisco/" target="_blank" rel="noopener noreferrer">
                         <i class="fa-brands fa-linkedin-in fa-2xl"></i>
                     </a>
                 </li>
                 <li class="nav-item nav-link px-4">
-                    <a href="mailto: jermy.portfolio@gmail.com">
+                    <a href="mailto: jermy.portfolio@gmail.com" target="_blank" rel="noopener noreferrer">
                         <i class="fa-solid fa-envelope fa-2xl fa-shake" style="--fa-animation-duration: 5s"></i>
                     </a>
                 </li>
                 <li class="nav-item nav-link px-4">
-                    <a href="https://github.com/BinaryEgo">
+                    <a href="https://github.com/BinaryEgo" target="_blank" rel="noopener noreferrer">
                         <i class="fa-brands fa-github fa-2xl"></i>
                     </a>
                 </li>
@@ -138,19 +138,29 @@
                 | Jermy Francisco All Rights Reserved
             </p>
             <p class="text-center text-muted fw-lighter">
-                <a class="text-muted fw-lighter " href="https://giphy.com/gifs/dommespace-domme-space-programador-qgQUggAC3Pfv687qPC">
+                <a class="text-muted fw-lighter "
+                   href="https://giphy.com/gifs/dommespace-domme-space-programador-qgQUggAC3Pfv687qPC"
+                   target="_blank" rel="noopener noreferrer">
                     Gifs via GIPHY</a>
                 , Art via
-                <a class="text-muted fw-lighter" href="https://unsplash.com/@merittthomas?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText">
+                <a class="text-muted fw-lighter"
+                   href="https://unsplash.com/@merittthomas?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText"
+                   target="_blank" rel="noopener noreferrer">
                     Artin Bakhan,
                 </a>
-                <a class="text-muted fw-lighter" href="https://unsplash.com/@artinbakhan?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText">
+                <a class="text-muted fw-lighter"
+                   href="https://unsplash.com/@artinbakhan?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText"
+                   target="_blank" rel="noopener noreferrer">
                     Meritt Thomas,
                 </a>
-                <a class="text-muted fw-lighter" href="https://unsplash.com/@_shography?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText">
+                <a class="text-muted fw-lighter"
+                   href="https://unsplash.com/@_shography?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText"
+                   target="_blank" rel="noopener noreferrer">
                     Shotaro Hamasaki,
                 </a>
-                <a class="text-muted fw-lighter" href="https://unsplash.com/@youssefsarhan?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText">
+                <a class="text-muted fw-lighter"
+                   href="https://unsplash.com/@youssefsarhan?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText"
+                   target="_blank" rel="noopener noreferrer">
                     Youssef Sarhan,
                 </a>
                 and others from <a class="text-muted fw-lighter" href="https://unsplash.com/">
