--- a/application/templates/projects.html
+++ b/application/templates/projects.html
@@ -209,7 +209,8 @@
                             </p>
                             <a href="{{ url_for('tarot_start') }}" class="btn btn-warning mt-2">
                                 Take Me To It!</a>
-                            <a href="#" class="btn btn-light mt-2">
+                            <a href="https://github.com/BinaryEgo/Portfolio/blob/master/application/project_modules/tarot_cards.py"
+                               target="_blank" rel="noopener noreferrer" class="btn btn-light mt-2">
                                 See The Code On Github</a>
                         </div>
                     </div>
@@ -251,7 +252,8 @@
                             </p>
                             <a href="{{ url_for('show_robots_txt') }}" class="btn btn-warning mt-2">
                                 Take Me To It!</a>
-                            <a href="#" class="btn btn-light mt-2">
+                            <a href="https://github.com/BinaryEgo/Portfolio/blob/master/application/project_modules/robots_checker.py"
+                               target="_blank" rel="noopener noreferrer" class="btn btn-light mt-2">
                                 See The Code On Github</a>
                             </p>
                         </div>
@@ -293,7 +295,8 @@
                             </p>
                             <a href="{{ url_for('page_preloader') }}" class="btn btn-warning mt-2">
                                 Take Me To It!</a>
-                            <a href="#" class="btn btn-light mt-2">
+                            <a href="https://github.com/BinaryEgo/Portfolio/blob/master/application/project_modules/movies_interest_boxoffice.py"
+                               target="_blank" rel="noopener noreferrer" class="btn btn-light mt-2">
                                 See The Code On Github</a>
                             </p>
                         </div>
