--- a/application/templates/index.html
+++ b/application/templates/index.html
@@ -97,8 +97,11 @@
         <h2 class="night-mode border-bottom border-2 border-info py-2">What I Have Built</h2>
         <!-- Summary -->
         <p class="night-mode">
-            Other than this personal website, <a href="https://github.com/BinaryEgo/Portfolio" class="code-text">
-            whose code you can see here</a>, I also have worked on the projects below.
+            Other than this personal website,
+            <a href="https://github.com/BinaryEgo/Portfolio" class="code-text"
+               target="_blank" rel="noopener noreferrer">
+                whose code you can see here
+            </a>, I also have worked on the projects below.
         </p>
         <!-- Portfolio Accordion -->
         <div class="container">
@@ -280,6 +283,7 @@
                                             <a href="{{ url_for('tarot_start') }}" class="btn btn-dark mt-2">
                                                 Take Me To It!</a>
                                             <a href="https://github.com/BinaryEgo/Portfolio/blob/master/application/project_modules/tarot_cards.py"
+                                               target="_blank" rel="noopener noreferrer"
                                                class="btn btn-light mt-2">
                                                 See The Code On Github</a>
                                             </p>
@@ -325,6 +329,7 @@
                                             <a href="{{ url_for('show_robots_txt') }}" class="btn btn-dark mt-2">
                                                 Take Me To It!</a>
                                             <a href="https://github.com/BinaryEgo/Portfolio/blob/master/application/project_modules/robots_checker.py"
+                                               target="_blank" rel="noopener noreferrer"
                                                class="btn btn-light mt-2">
                                                 See The Code On Github</a>
                                             </p>
@@ -369,6 +374,7 @@
                                             <a href="{{ url_for('page_preloader') }}" class="btn btn-dark mt-2">
                                                 Take Me To It!</a>
                                             <a href="https://github.com/BinaryEgo/Portfolio/blob/master/application/project_modules/movies_interest_boxoffice.py"
+                                               target="_blank" rel="noopener noreferrer"
                                                class="btn btn-light mt-2">
                                                 See The Code On Github</a>
                                             </p>
