--- a/application/templates/index.html
+++ b/application/templates/index.html
@@ -20,7 +20,7 @@
                 <!-- Heading -->
                 <h1>JERMY FRANCISCO</h1>
                 <p class="subtitle">
-                    Project Manager, Junior Developer, and Data Analyst
+                    Project Manager, Web Developer, and Data Analyst
                     <span class="blinking-cursor">|</span>
                 </p>
             </div>
