--- a/application/templates/index.html
+++ b/application/templates/index.html
@@ -66,9 +66,8 @@
                 Now that I have added <strong>HTML,
                     CSS,
                     Python </strong>
-                and <strong>SQL</strong> to my tool box, and I am excited to both put my skills to work and to
-                strengthen
-                my web & software development skills.
+                and <strong>SQL</strong> to my tool box, I am excited to both put my skills to work and to
+                strengthen my web & software development skills.
             </p>
             <!-- Button for More About Me -->
             <a class="my-2 btn btn-outline-primary" href="{{ url_for('show_aboutme') }}">
