--- a/application/templates/aboutme.html
+++ b/application/templates/aboutme.html
@@ -49,11 +49,11 @@
                 Now that I have added <strong>HTML,
                     CSS,
                     Python </strong>
-                and <strong>SQL</strong> to my tool box, and I am excited to both put my skills to work and to
+                and <strong>SQL</strong> to my tool box, I am excited to both put my skills to work and to
                 strengthen
                 my web & software development skills.
             </p>
-            <p class="alert alert-info">I got my Bachelor of Business Administration (BBA) from CUNY Baruch College in
+            <p class="alert alert-info">I received my Bachelor of Business Administration (BBA) from CUNY Baruch College in
                 2015.</p>
         </div>
     </div>
