--- a/application/templates/contact.html
+++ b/application/templates/contact.html
@@ -47,7 +47,7 @@
     <p class="alert alert-warning text-center">
         I am currently looking for full-time employment!
         <br>
-        If you believe I would be good fit* for yor company, <br> please reach out!
+        If you believe I would be a good fit* for your company, <br> please reach out!
         <br>
         <br>
         * <span class="small">I prefer fully-remote, non-freelance opportunities</span> *
