--- a/application/templates/contact.html
+++ b/application/templates/contact.html
@@ -86,9 +86,16 @@
 <div class="container py-2 my-3 text-md-start text-center">
     <div class="container">
         <h4 class="mb-4 border-bottom border-2 border-info pb-2">Follow Me</h4>
-        <p>You can find me on <a href="https://www.linkedin.com/in/jermyfrancisco/"><i class="fa-brands fa-linkedin-in">
-            LinkedIn</i></a>
-            and <a href="#"><i class="fa-brands fa-github"> Github</i></a>.</p>
+        <p>You can find me on
+            <a href="https://www.linkedin.com/in/jermyfrancisco/" target="_blank"
+               rel="noopener noreferrer">
+                <i class="fa-brands fa-linkedin-in">
+                    LinkedIn
+                </i>
+            </a>
+            and <a href="https://github.com/BinaryEgo/Portfolio" target="_blank" rel="noopener noreferrer">
+                <i class="fa-brands fa-github"> Github</i>
+            </a>.</p>
     </div>
 </div>
 
