added sql/tableau project to projects.html
updated resume
changed wording on aboutme.html

--- a/application/templates/aboutme.html
+++ b/application/templates/aboutme.html
@@ -67,15 +67,19 @@
         </tr>
         <tr>
             <th scope="row">FRAMEWORKS</th>
-            <td>Bootstrap, Flask, Pandas, NumPy</td>
+            <td>Bootstrap, Flask
+        </tr>
+        <tr>
+            <th scope="row">LIBRARIES</th>
+            <td>Pandas, NumPy, Matplotlib, Plotly
         </tr>
         <tr>
             <th scope="row">SOFTWARE</th>
-            <td>Microsoft Office, PyCharm, MySQL, Google Colab</td>
+            <td>Microsoft Office, PyCharm, MySQL, Tableau, Google Colab</td>
         </tr>
         <tr>
             <th scope="row">SKILLS</th>
-            <td>Project Management, Web Development, Data Analysis</td>
+            <td>Project Management, Web Development, Data Analysis, Data Visualization</td>
         </tr>
         </tbody>
     </table>
