--- a/application/templates/index.html
+++ b/application/templates/index.html
@@ -356,7 +356,7 @@
                                         <div class="card-body">
                                             <h5 class="card-title py-2 border-top"><strong>
                                                 <a href="{{ url_for('page_preloader') }}">
-                                                    Data Science - Box Office vs Streaming
+                                                    Analysis - Box Office vs Streaming
                                                 </a>
                                             </strong></h5>
                                             <p class="card-text">
